Vwrap background css fix

--- a/venobox/venobox.css
+++ b/venobox/venobox.css
@@ -211,7 +211,7 @@ body{
     -moz-transition: opacity .25s ease-in-out;
     -webkit-transition: opacity .25s ease-in-out;
     width: 100%;
-    height: 100%;
+    /*height: 100%;*/
     float: left;
     position: relative;
     margin: 0;
